--- a/src/webapp/WEB-INF/pages/show_user.html
+++ b/src/webapp/WEB-INF/pages/show_user.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>User</title>
 </head>
 <body>
-<H3>User</H3>
+<H3>Пользователь</H3>
 <div>
     <p> Name: <span th:text="${user.getName()}">Value</span></p>
     <p> Age: <span th:text="${user.getAge()}">Value</span></p>
